# ESP32

./: .gitignore  README.md
02_ledBlink/: sdkconfig
BlueLed_Test_2.11/: sdkconfig  sdkconfig.old
BlueLed_Test_2.11/main/: main.c
ESP32通信协议驱动/: I2C.c  I2C.h  ONEWIRE.c  ONEWIRE.h  i2c_hardware.c  i2c_hardware.h  i2c_software.c
Example_ADC_Test/: ADC.docx
Example_ADC_Test/adc/main/: adc1_example_main.c
Example_BlueTooth_Test/: BlueTooth.docx
Example_BlueTooth_Test/ble_Phone_test/: sdkconfig.old
Example_BlueTooth_Test/ble_Phone_test/main/: ble_compatibility_test.c
Example_BlueTooth_Test/ble_ibeacon/: sdkconfig.old
Example_BlueTooth_Test/ble_ibeacon/main/: esp_ibeacon_api.c  esp_ibeacon_api.h  ibeacon_demo.c
Example_BlueTooth_Test/ble_ibeacon_adv/main/: ibeacon_demo.c
Example_BlueTooth_Test/ble_spp_server/main/: ble_spp_server_demo.c
Example_BlueTooth_Test/blufi/main/: blufi_example_main.c
Example_BlueTooth_Test/bt_discovery/: sdkconfig
Example_BlueTooth_Test/controller_vhci_ble_adv/main/: app_bt.c
Example_BlueTooth_Test/gatt_security_server/main/: example_ble_sec_gatts_demo.c
Example_BlueTooth_Test/gatt_server/main/: gatts_demo.c
Example_BlueTooth_Test/gatt_server_service_table/main/: gatts_table_creat_demo.c  gatts_table_creat_demo.h
Example_Gpio_Test/: GPIO.docx
Example_Gpio_Test/DHT11/: CMakeLists.txt  DHT11-CSDN-1.url  DHT11-CSDN-2.url  Makefile
Example_Gpio_Test/DHT11/main/: CMakeLists.txt  DHT11.c  DHT11.h  main.c
Example_Gpio_Test/DS18B20/: CMakeLists.txt  参考网页.txt
Example_Gpio_Test/DS18B20/main/: CMakeLists.txt  DS18B20.c  DS18B20.h  main.c
Example_Gpio_Test/generic_gpio/main/: gpio_example_main.c
Example_Http_Test/esp_http_client/: sdkconfig
Example_Http_Test/esp_http_client/main/: esp_http_client_example.c
Example_I2C_Test/i2c_tools/: sdkconfig
Example_Ledc_Test/ledc_basic/main/: ledc_basic_example_main.c
Example_Ledc_Test/ledc_fade/main/: ledc_fade_example_main.c
Example_Ota_Test/native_ota_example/: sdkconfig
Example_Ota_Test/native_ota_example/main/: native_ota_example.c
Example_Ota_Test/simple_ota_example/: sdkconfig
Example_Ota_Test/simple_ota_example/simple_ota_example/: sdkconfig
Example_Timer_Test/Soft_Timer_Test_2.14/main/: main.c
Example_Timer_Test/esp_timer/: sdkconfig  高分辨率定时器.docx
Example_Timer_Test/esp_timer/main/: esp_timer_example_main.c
Example_Timer_Test/timer_group/: 硬件定时器.docx
Example_Timer_Test/timer_group/main/: timer_group_example_main.c
Example_Uart_Test/uart_rx_tx/main/: main.c
Example_Wifi_Test/: Wifi.docx
Example_Wifi_Test/dpp-enrollee/: sdkconfig
Example_Wifi_Test/softAP/: sdkconfig.old
FreeRTOS_Task_Test/main/: main.c
GY-80/: CMakeLists.txt  Makefile
GY-80/main/: CMakeLists.txt  I2C.c  IMU.c  IMU.h  Init_Read.c  Init_Read.h  KF.c  KF.h  MadgwickAHRS.c  MadgwickAHRS.h  MahonyAHRS.c  MahonyAHRS.h  Register.h  i2c_hardware.c  i2c_hardware.h  i2c_software.h  main.c
GY-80_components/: sdkconfig  sdkconfig.old
GY-80_components/components/i2c/: CMakeLists.txt
GY-80_components/components/i2c/include/: i2c_hardware.h
GY-80_components/components/i2c/src/: i2c_hardware.c
GY-80_components/components/imu/: CMakeLists.txt
GY-80_components/components/imu/include/: imu.h
GY-80_components/components/imu/src/: imu.c
GY-80_components/components/kalman_fliter/: CMakeLists.txt
GY-80_components/components/kalman_fliter/include/: kf.h
GY-80_components/components/kalman_fliter/src/: kf.c
GY-80_components/main/: CMakeLists.txt  init_Read.c  init_Read.h  main.c  register.h
GY-80_softI2C/main/: CMakeLists.txt  IMU.c  Init_Read.c  Init_Read.h  KF.c  KF.h  MadgwickAHRS.c  MahonyAHRS.c  Register.h  i2c_software.h  main.c
OTA_Led_Test_3.3/: sdkconfig  sdkconfig.old
OTA_Led_Test_3.3/main/: CMakeLists.txt  main.c  ota_test.c  timer_gpio_test.c  timer_gpio_test.h  wifi_connect.c  wifi_connect.h
Serial_intr_Arduino/: 新建文本文档 (2).txt
Serial_intr_Arduino/src/: main.cpp
TF_Dispensing/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
TF_Dispensing/main/: CMakeLists.txt  gap_gatts.c  gap_gatts.h  main.c  ota_task.h  ota_test.c  ota_test.h  timer_gpio.c  timer_gpio.h  wifi_connect.c  wifi_connect.h  x_gatts_demo.c
Timer_Gpio_Test_2.25/: README.md
Timer_Gpio_Test_2.25/main/: main.c  workspace.code-workspace
Ultrasonic_cleaners/: CMakeLists.txt  Makefile  sdkconfig
Ultrasonic_cleaners/components/bluetooth/: CMakeLists.txt
Ultrasonic_cleaners/components/ota/: CMakeLists.txt
Ultrasonic_cleaners/components/ota/include/: ota_task.h
Ultrasonic_cleaners/components/ota/src/: ota_task.c
Ultrasonic_cleaners/components/timer/: CMakeLists.txt  component.mk
Ultrasonic_cleaners/components/wifi/: CMakeLists.txt
Ultrasonic_cleaners/components/wifi/src/: wifi_connect.c
Ultrasonic_cleaners/main/: CMakeLists.txt  main.c  ota_task.c  ota_test.c  ota_test.h  timer_gpio.c  timer_gpio.h  timer_gpio_test.c  timer_gpio_test.h
Ultrasonic_cleaners_NO/main/: CMakeLists.txt  ota_test.c  timer_gpio.h
Ultrasonic_cleaners_ble/: sdkconfig
Ultrasonic_cleaners_ble/main/: main.c  ota_test.c  timer_gpio.c  timer_gpio.h  x_gatts_demo.c  x_gatts_demo.h
Ultrasonic_cleaners_ble_verify/: partitions_two_ota_coredump.csv  sdkconfig  sdkconfig.old  分别读取.txt
Ultrasonic_cleaners_ble_verify/main/: CMakeLists.txt  gap_gatts.c  gap_gatts.h  main.c  ota_task.c  ota_test.c  timer_gpio.c  timer_gpio.h  wifi_connect.c  wifi_connect.h  x_gatts_demo.c  x_gatts_demo.h
Ultrasonic_cleaners_sc/: sdkconfig
Ultrasonic_cleaners_sc/main/: CMakeLists.txt  main.c  ota_test.c  smartconfig_test.c  smartconfig_test.h  timer_gpio.c  wifi_connect.c
Ultrasonic_cleaners_非组件/main/: gap_gatts.h  ota_task.c  ota_task.h  timer_gpio.h  wifi_connect.h
blink/main/: blink_example_main.c
controller_hci_uart_esp32/: sdkconfig
gatt_security_server/main/: example_ble_sec_gatts_demo.c
gatt_server_service_table/main/: gatts_table_creat_demo.c
generic_gpio/main/: gpio_example_main.c
ledblink/main/: CMakeLists.txt
sdspi/main/: sd_card_example_main.c
tcp_client/main/: tcp_client.c
(+7 files in other folders)
